<resources>
    <string name="app_name">mifos-mobile-cn</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_action_back">Back</string>
    <string name="dialog_permission_denied">Permission Denied</string>
    <string name="dialog_action_i_am_sure">I\'M Sure</string>
    <string name="dialog_action_re_try">Retry</string>
    <string name="dialog_action_app_settings">App Settings</string>
    <string name="package_name" translatable="false">package</string>
    <string name="msg_setting_activity_not_found">Something went wrong finding Settings activity.
        \nGo to \'Settings\' and grant permission manually.
    </string>
    <string name="enter_you_credentials">Please enter your credentials</string>
    <string name="dialog_message_phone_state_permission_denied_prompt">This permission is required
        to show currency according to your country.Are you sure you want to deny it?</string>
    <string name="dialog_message_phone_state_permission_never_ask_again">You have denied permission
        to fetch Phone State, without this permission currency might not be shown in proper format.
        Please enable it in settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="password_required">Password required</string>
    <string name="username_required">Username required</string>
    <string name="welcome">Welcome</string>
    <string name="logging_in">Logging in.....</string>
    <string name="error_validation_blank">%1$s cannot be blank</string>
    <string name="error_validation_minimum_chars">%1$s cannot be less than %2$d characters</string>
    <string name="error_validation_cannot_contain_spaces">%1$s cannot contain spaces</string>
    <string name="error_logging_in">Error logging in</string>
    <string name="login_using_password_confirmation">Are you sure you want to login using Password?
    </string>
    <string name="already_have_an_account">Already have an account? login</string>
    <string name="home">Home</string>
    <string name="dialog_logout">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="accounts_overview">Account Overview</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="manage_accounts">Manage Accounts</string>
    <string name="accounts">Accounts</string>
    <string name="transfer">Transfer</string>
    <string name="apply_for_loan">Apply for Loan</string>
    <string name="more">More</string>
    <string name="beneficiaries">Beneficiaries</string>
    <string name="charges">Charges</string>
    <string name="survey">Survey</string>
    <string name="contact_email">support@mifos.org</string>
    <string name="help_line_number">8000000000</string>
    <string name="need_help">Contact Us</string>
    <string name="third_party_transfer">Third Party Transfer</string>
    <string name="manage_beneficiaries">Manage Beneficiaries</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="help">Help</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="exit_message">Press back again to exit</string>
    <string name="notification">Notifications</string>
    <string name="report_or_bug">Report Or Bug</string>
    <string name="create_new_loan">Create New Loan</string>
    <string-array name="products">
        <item>Product 1</item>
        <item>Product 2</item>
    </string-array>
    <string name="short_name">Short name</string>
    <string name="principal_amount">Principal Amount</string>
    <string name="repay_every">Repay every</string>
    <string name="on">On</string>
    <string name="term">Term</string>
    <string name="on_the">on the</string>
    <string name="day">Day</string>
    <string name="in">In</string>
    <string-array name="loan_application_steps">
        <item>Loan details</item>
        <item>Debt to income ratio</item>
        <item>Co-signer</item>
        <item>Review</item>
    </string-array>
    <string name="ratio">Ratio: %1$s</string>
    <string name="total_debt">Debts(Total: 0:00)</string>
    <string name="total_income">Income(Total: 0:00)</string>
    <string name="no_debt_to_show">No debts to show. add debt</string>
    <string name="no_income_to_show">No income to show. add income</string>
    <string name="add_income">Add Income</string>
    <string name="add_debt">Add Debt</string>
    <string name="customer">Customer</string>
    <string name="amount">Amount</string>
    <string name="debt_income_edit_image">Debt edit delete image</string>
    <string name="debt_income_delete_image">Debt income delete image</string>
    <string name="description">Description</string>
    <string name="debt_income">Debt Income</string>
    <string name="edit_debt">Edit Debt</string>
    <string name="edit_income">Edit Income</string>
    <string name="amount_should_be_not_empty">Amount should not be empty</string>
    <string name="description_should_not_be_empty">Description should not be empty</string>
    <string name="value_must_greater_or_equal_to">Value must be greater than or equal to&#160; %1$s</string>
    <string name="value_must_less_than_or_equal_to">Value must be less than or equal to&#160; %1$s</string>
    <string-array name="repay_unit_type">
        <item>Weeks</item>
        <item>Months</item>
        <item>Years</item>
    </string-array>
    <string-array name="time_slots">
        <item>First</item>
        <item>Second</item>
        <item>Third</item>
        <item>Last</item>
    </string-array>
    <string-array name="month_names">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="week_names">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="repay_on_months">
        <item>1.</item>
        <item>2.</item>
        <item>3.</item>
        <item>4.</item>
        <item>5.</item>
        <item>6.</item>
        <item>7.</item>
        <item>8.</item>
        <item>9.</item>
        <item>10.</item>
        <item>11.</item>
        <item>12.</item>
        <item>13.</item>
        <item>14.</item>
        <item>15.</item>
        <item>16.</item>
        <item>17.</item>
        <item>18.</item>
        <item>19.</item>
        <item>20.</item>
        <item>21.</item>
        <item>22.</item>
        <item>23.</item>
        <item>24.</item>
        <item>25.</item>
        <item>26.</item>
        <item>27.</item>
        <item>28.</item>
        <item>29.</item>
        <item>30.</item>
    </string-array>
    <string-array name="termUnit">
        <item>Term 1</item>
        <item>Term 2</item>
    </string-array>
    <string name="required">Required</string>
    <string name="must_be_at_least_three_characters">Must be at least %1$d characters</string>
    <string name="only_thirty_two_character_allowed">Only 32 character allowed</string>
    <string name="only_alphabetic_decimal_digits_characters_allowed">Only alphabetic, decimal digits,\'-\' \'_\' \'.\' \'!\' \'~\' \'*\' \'(\' \')\' characters allowed</string>
    <string name="unique_required">Unique, Required</string>
    <string name="loan">Loan</string>
    <string name="deposit">Deposit</string>
    <string name="colon">:&#160;</string>
    <string name="last_modified_on">Last modified on</string>
    <string name="last_modified_by">Last modified by</string>
    <string name="account_identifier">Account Identifier</string>
    <string name="small_text">Small text</string>
    <string name="deposit_account">Deposit Account</string>
    <string name="loan_account">Loan Account</string>
    <string name="created">Created</string>
    <string name="pending">Pending</string>
    <string name="approved">Approved</string>
    <string name="active">Active</string>
    <string name="closed">Closed</string>
    <string name="locked">Locked</string>
    <string name="filter_loan">Filter Loan Accounts</string>
    <string name="filter_deposit">Filter Deposit Accounts</string>
    <string name="select_you_want">Select all you want</string>
    <string name="filter">Filter</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="filter_accounts">Filter Accounts</string>
    <string name="search">Search</string>
    <string name="customer_image">Customer image</string>
    <string name="current_status">Current status</string>
    <string name="address">Address</string>
    <string name="contact_information">Contact information</string>
    <string name="no_contact_details_available">No Contact details available</string>
    <string name="birthday">Birthday</string>
    <string name="financial_products">Financial products</string>
    <string name="loan_accounts">Loan accounts</string>
    <string name="manage_loan_accounts">Manage loan accounts</string>
    <string name="deposit_accounts">Deposit accounts</string>
    <string name="manage_deposit_accounts">Manage deposit accounts</string>
    <string name="management">Management</string>
    <string name="identification_cards">Identification cards</string>
    <string name="view_identification_card">View identification cards</string>
    <string name="tasks">Tasks</string>
    <string name="change_customer_status">Change the status of customer</string>
    <string name="recent_activities">Recent activities</string>
    <string name="status_image">Status Image</string>
    <string name="error_fetching_customer_details">Failed to fetch customer details</string>
    <string name="assigned_employee">Assigned Employee: </string>
    <string name="not_assigned">Not assigned</string>
    <string name="account_overview">Account Overview</string>
    <string name="activities_created_by_on">%1$s, %2$s</string>
    <string name="activities">Activities</string>
    <string name="Commands">Commands</string>
    <string name="identification_issuer">Issuer: %1$s</string>
    <string name="identification_search">Search identification card</string>
    <string name="loading_scans_please_wait">Loading scans please wait…</string>
    <string name="scans_uploaded">Scan Uploaded</string>
    <string name="issuer">Issuer</string>
    <string name="expiration_date">Expiration date</string>
    <string name="type">Type</string>
    <string name="total_balance">Total Balance</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="mifos_mobile_cn">Mifos Mobile CN</string>
    <string name="create_account">Don\'t have an account? Create one.</string>
    <string name="four_twenty_dollars">$420</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="edit_image">Edit Image</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="dummy_name">Dwight Schrute</string>
    <string name="dummy_phone_number">+1-202-555-0148</string>
    <string name="dummy_email_address">rohan@mifos.org</string>
    <string name="account_number">Account Number</string>
    <string name="generate_qr_code">Generate QR code</string>
    <string name="full_name">Full name</string>
    <string name="msisdn">MSISDN</string>
</resources>