<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- dummy ids are given to ech group to make dividers between each group -->
    <group android:id="@+id/group1"
           android:checkableBehavior="single">

        <item
            android:id="@+id/item_home"
            android:checked="true"
            android:icon="@drawable/ic_account_balance_black_24dp"
            android:title="@string/home"/>

        <item
            android:id="@+id/item_accounts"
            android:icon="@drawable/ic_account_balance_wallet_black_24dp"
            android:title="@string/accounts"/>

        <item
            android:id="@+id/item_recent_transactions"
            android:checked="false"
            android:icon="@drawable/ic_label_black_24dp"
            android:title="@string/recent_transactions"/>


        <item
            android:id="@+id/item_charges"
            android:checked="false"
            android:icon="@drawable/ic_charges"
            android:title="@string/charges"/>
        <item
            android:id="@+id/item_third_party_transfer"
            android:checked="false"
            android:icon="@drawable/ic_compare_arrows_black_24dp"
            android:title="@string/third_party_transfer"/>
        <item
            android:id="@+id/item_beneficiaries"
            android:checked="false"
            android:icon="@drawable/ic_beneficiaries_48px"
            android:title="@string/manage_beneficiaries"/>
        <item
            android:id="@+id/item_product"
            android:checked="false"
            android:icon="@drawable/ic_products_black_24dp"
            android:title="@string/products" />

        <item
            android:id="@+id/item_settings"
            android:checked="false"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>
    </group>

</menu>
