<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_bg">

    <include layout="@layout/toolbar"
        android:visibility="gone"/>

    <androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/layout_padding_30dp"
            android:layout_marginTop="@dimen/layout_padding_150dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mifos_mobile_cn"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_35sp"
                android:fontFamily="@font/productsans"/>


            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_padding_65dp"
                android:layout_width="match_parent"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutLogin"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textColorHint="@color/white"
                    android:layout_marginBottom="@dimen/layout_padding_20dp"
                    android:backgroundTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:hint="@string/username"
                        android:id="@+id/etUsername"
                        android:inputType="text"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:textColor="@color/white"
                        android:fontFamily="@font/productsans"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutLogin"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/white"
                    android:textColorHint="@color/white"
                    android:backgroundTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:hint="@string/password"
                        android:id="@+id/etPassword"
                        android:inputType="textPassword"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:textColor="@color/white"
                        android:textColorHighlight="@color/white"
                        android:fontFamily="@font/productsans"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_gravity="center"
                android:layout_height="@dimen/layout_padding_50dp"
                android:layout_marginTop="@dimen/layout_padding_30dp"
                android:layout_width="@dimen/layout_padding_100dp"
                android:text="@string/login"
                android:backgroundTint="@color/white"
                android:textColor="@color/grey_redesign"
                android:fontFamily="@font/productsans"/>

            <TextView
                android:layout_marginTop="@dimen/layout_padding_15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:fontFamily="@font/productsans"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
    
</LinearLayout>