<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <include layout="@layout/toolbar_new"
        android:visibility="gone"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:textColorHint="@color/black"
        android:theme="@style/TextAppearance.AppCompat">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/fullNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:hint="@string/full_name"
            android:inputType="textCapSentences"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mobileLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fullNameLayout"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/black"
        android:theme="@style/TextAppearance.AppCompat">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/mobileEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:hint="@string/msisdn"
            android:inputType="number"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mobileLayout"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/black"
        android:theme="@style/TextAppearance.AppCompat">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/accountLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailLayout"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:textColorHint="@color/black"
        android:layout_marginTop="10dp"
        android:theme="@style/TextAppearance.AppCompat">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/accountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:hint="@string/account_number"
            android:inputType="phone"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/generateQrCodeButton"
        android:layout_below="@+id/accountLayout"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        >
        <ImageView
            android:id="@+id/qrCodeImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:contentDescription="@null" />
    </FrameLayout>
    <Button
        android:id="@+id/generateQrCodeButton"
        style="?android:buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/generate_qr_code"
        android:textColor="@color/white"
        android:textStyle="bold" />
</RelativeLayout>
